--- a/config/database.yml
+++ b/config/database.yml
@@ -17,8 +17,7 @@ development:
   encoding: unicode
   database: ibrahim_test_development
   pool: 5
-  username: ibrahim_test
-  password:
+  username: iib
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -43,13 +42,11 @@ test:
   encoding: unicode
   database: ibrahim_test_test
   pool: 5
-  username: ibrahim_test
-  password:
+  username: iib
 
 production:
   adapter: postgresql
   encoding: unicode
   database: ibrahim_test_production
   pool: 5
-  username: ibrahim_test
-  password:
+  username: iib
